# mpc_controller_pkg

./: CMakeLists.txt
Traj/: Traj_9x_8u_Rotor1failed.mat  Traj_9x_8u_Rotor1failed_230617.mat  Traj_9x_8u_Rotor1failed_231031.mat  Traj_9x_8u_Rotor1failed_231102.mat  Traj_9x_8u_Rotor1failed_highAttitude.mat  Traj_9x_8u_no_failure.mat  Traj_9x_8u_no_failure_sim.mat  u_traj.txt  u_traj_2508.txt  u_traj_no_failure_sim.txt  u_traj_rotor1_failure_1.txt  u_traj_rotor1_failure_2.txt  u_traj_rotor1_failure_3.txt  x_trag_no_failure_sim.txt  x_traj.txt  x_traj_2508.txt  x_traj_rotor1_failure_1.txt  x_traj_rotor1_failure_2.txt  x_traj_rotor1_failure_3.txt
include/mpc_controller_pkg/c_include/: grampc_conversion_Cmex.h  ourLinearization.h  probfct.h  tracking.h
include/mpc_controller_pkg/cpp_include/: UAV_model.hpp  problem_description.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mpc_controller_pkg/lib/mpc_controller_pkg/: mpc_controller  sim_pix  simulator
install/mpc_controller_pkg/share/mpc_controller_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mpc_controller_pkg/share/mpc_controller_pkg/cmake/: mpc_controller_pkgConfig.cmake
launch/: mpc_controller_launch.py
log/: latest_build
src/: mpc_controller.cpp  sim_pix.cpp  simulator.cpp  subscriber_node.cpp
src/c_src/: grampc_run.c  localTest.c  ourLinearization.c  tracking.c
src/cpp_src/: UAV_model.cpp
